vk-tensorflow-demo/kubernetes/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
spec:
  rules:
  - host: <host>
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
